--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,2 @@
 <%= render "form", task: @task %>
-<%= link_to "Return to details", task_path(@task) %>
+<%= link_to "Return to details", task_path(@task), class: "btn btn-secondary my-3" %>
