--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,16 @@
-<h1>My Tasks</h1>
-<ul>
-  <% @tasks.each do |task| %>
-    <li>
-      <%= link_to task.title, task_path(task) %><%= link_to "Delete",
-      task_path(task),
-      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
-    </li>
-  <% end %>
-</ul>
-<%= link_to "Add a new task", new_task_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1 class="my-4">My Tasks</h1>
+      <ul class="list-group">
+        <% @tasks.each do |task| %>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <%= link_to task.title, task_path(task) %>
+            <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+          </li>
+        <% end %>
+      </ul>
+      <%= link_to "Add a new task", new_task_path, class: "btn btn-primary mt-3" %>
+    </div>
+  </div>
+</div>
