--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,9 +1,18 @@
-<h2><%= @task.title %></h2>
-<p> <%= @task.details %></p>
-<p> <%= @task.completed %></p>
-<%= link_to "Edit this task", edit_task_path(@task) %>
-<%= link_to "Browse all tasks", tasks_path %>
-<%= link_to "Delete",
-  task_path(@task),
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-%>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h2><%= @task.title %></h2>
+      <p><%= @task.details %></p>
+      <p>
+        <% if @task.completed %>
+          <div class="bg-success text-white d-inline-block py-1 px-2">Completed</div>
+        <% else %>
+          <div class="bg-danger text-white d-inline-block py-1 px-2">Incomplete</div>
+        <% end %>
+      </p>
+      <%= link_to "Edit this task", edit_task_path(@task), class: "btn btn-primary mr-2" %>
+      <%= link_to "Browse all tasks", tasks_path, class: "btn btn-secondary mr-2" %>
+      <%= link_to "Delete", task_path(@task), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+    </div>
+  </div>
+</div>
